testdata/language-features/basic-list/list15.reject.out
type error: can not unify
[32m'Char[m
with
[32m()[m

in testdata/language-features/basic-list/list15.reject.lc:1:20:
value = 'h':'i':():[]
                   ^^

------------ trace
!type error: can not unify
[32m'Char[m
with
[32m()[m

in testdata/language-features/basic-list/list15.reject.lc:1:20

------------ tooltips
testdata/language-features/basic-list/list15.reject.lc 1:9-1:12  Char
testdata/language-features/basic-list/list15.reject.lc 1:9-1:13  List Char -> List Char
testdata/language-features/basic-list/list15.reject.lc 1:12-1:13  {a} -> a -> List a -> List a
testdata/language-features/basic-list/list15.reject.lc 1:13-1:16  Char
testdata/language-features/basic-list/list15.reject.lc 1:13-1:17  List Char -> List Char
testdata/language-features/basic-list/list15.reject.lc 1:16-1:17  {a} -> a -> List a -> List a
testdata/language-features/basic-list/list15.reject.lc 1:17-1:19  ()
testdata/language-features/basic-list/list15.reject.lc 1:17-1:20  List () -> List ()
testdata/language-features/basic-list/list15.reject.lc 1:19-1:20  {a} -> a -> List a -> List a
